fix z-index layering on mobile

--- a/apps/redi-talent-pool/src/pages/app/job-listing/JobListing.scss
+++ b/apps/redi-talent-pool/src/pages/app/job-listing/JobListing.scss
@@ -245,7 +245,7 @@
   display: flex;
   align-items: flex-start;
   justify-content: center;
-  z-index: 1000;
+  z-index: 5;
   padding-top: 200px;
 }
 
